# Riemann_problem

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Lagrange_1D.cpp.D36099F739375CB3.idx  Lagrange_1D.h.0D1E5B570AFEE46D.idx  Parameters.cpp.71095DF530C2EE4E.idx  Parameters.h.B013BA2050AED983.idx  custom_concepts.h.2A79D4DDFE07837B.idx  error_handling.h.3BA4FCEA1A16460F.idx  io_auxiliary.cpp.F171EECA8AF56AC4.idx  io_auxiliary.h.0833AECD7A3D8B79.idx  main.cpp.79261F75140EEDAB.idx
headers/: CJ_Lagrange_1D.h  CJ_Lagrange_1D_Parameters.h  Lagrange_1D.h  Parameters.h  Parameters_Lagrange_1D.h  Parameters_parser.h  Parser.h  Parser_Lagrange_1D.h  Parser_base.h  Solver_base.h  custom.h  custom_concepts.h  elasticity_Lagrange_1D.h  elasticity_Lagrange_1D_Parameters.h  io_auxiliary.h
headers_new/: Parameters.h  Parameters_Lagrange_1D.h  Parser.h
legacy/headers/: Lagrange_1D.h  Parameters_Lagrange_1D.h  Terminal.h  custom.h  custom_aliases.h  custom_functions.h  error_handling.h  io_auxiliary.h
legacy/headers_old/: Parameters.h  Parameters_Lagrange_1D.h  Solver_base.h
legacy/source/: Lagrange_1D.cpp  Parameters_Lagrange_1D.cpp  Parser.cpp  io_auxiliary.cpp  main.cpp
scenarios/: scenario2.scen  scenario2.yaml  scenario3.scen  scenario3_Lagrange.scen  scenario4.yaml  scenario4_el_L1D.scen  scenario5_CJ_L1D.scen
source/: CJ_Lagrange_1D.cpp  CJ_Lagrange_1D_Parameters.cpp  Lagrange_1D.cpp  Parameters.cpp  Parameters_Lagrange_1D.cpp  Parser_Lagrange_1D.cpp  elasticity_Lagrange_1D.cpp  elasticity_Lagrange_1D_Parameters.cpp  io_auxiliary.cpp  main.cpp  post.py
src/: CMakeLists.txt  Parser.cpp  Parser.h  Solver_Godunov_1D.cpp  Solver_Godunov_1D.h  Solver_Lagrange_1D.cpp  Solver_Lagrange_1D.h  VariableType.h  auxiliary_functions.h  auxiliary_functions.hpp  concepts.h  concepts.hpp  error_handling.h  iSolver.h  io.cpp  io.h  io.hpp  main.cpp  parser.cpp  parser.h  parser.hpp  parsers.cpp  parsers.hpp  parsing_line.cpp  parsing_line.h  plot_lagrange1d.py  rationale.md  solver.hpp  solver_lagrange1d.cpp  solver_lagrange1d.hpp  solver_riemann1d.cpp  solver_riemann1d.hpp  stashed.hpp  test.cpp
tests/: CMakeLists.txt  Io_unit_test.cpp  Io_unit_test.hpp  main.cpp  parser_test.cpp  parser_test.h  parser_unittest.cpp
tests/samples/: array_types.yaml  simple_types.yaml
